--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "dotenv": "^16.3.1",
+    "jwt-decode": "^3.1.2",
+    "luxon": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3",
     "vite-tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
     "@redux-devtools/extension": "^3.2.5",
     "@redux-saga/types": "^1.2.1",
+    "@types/luxon": "^3.3.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-redux": "^7.1.25",
