--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "dotenv": "^16.3.1",
+    "framer-motion": "^10.16.1",
     "jwt-decode": "^3.1.2",
     "luxon": "^3.4.0",
     "react": "^18.2.0",
