--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.1",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.1",
     "jwt-decode": "^3.1.2",
